minor changes in project 1